--- a/config/locales/views/en.yml
+++ b/config/locales/views/en.yml
@@ -538,6 +538,10 @@ en:
   bookmarks:
     bookmark_user_module:
       bookmarked_by_html: Bookmarked by %{pseud_link}
+    filters:
+      word_count: Word Count
+      from: From
+      to: To
     index:
       advanced_search: try our advanced search
       choose_fandom: choose a fandom
